# stuff

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  main.cpp  scc.sh
libs/bit/: CMakeLists.txt
libs/bit/include/stuff/: bit.hpp
libs/bit/include/stuff/bit/detail/: bit.ipp
libs/bit/test/: CMakeLists.txt  bit.cpp
libs/blas/: CMakeLists.txt
libs/blas/include/stuff/: blas.hpp
libs/blas/include/stuff/blas/: matrix.hpp  vector.hpp
libs/blas/include/stuff/blas/detail/: concepts.hpp  matops.ipp  swizzle.ipp  vecops.ipp  vecops_binary.ipp  vecops_swizzle.ipp
libs/blas/include/stuff/blas/detail/generic_vec/: arith.hpp  arith.ipp  common.hpp  common.ipp  generic_vec_ops.hpp  geometric.hpp  geometric.ipp  relational.hpp  relational.ipp  swizzle.hpp  swizzle.ipp
libs/blas/include/stuff/blas/detail/plain_vec/: arith.hpp  arith.ipp  common.hpp  common.ipp  geometric.hpp  geometric.ipp  plain_vec_ops.hpp  relational.hpp  relational.ipp  swizzle.hpp  swizzle.ipp
libs/blas/include/stuff/blas/matrix/: matrices.hpp
libs/blas/test/: CMakeLists.txt  matrix.cpp  vector.cpp
libs/core/: CMakeLists.txt
libs/core/include/stuff/: core.hpp
libs/core/include/stuff/core/: bunch_of_types.hpp  integers.hpp  stow.hpp  string_literal.hpp  try.hpp  tuple.hpp  type_exists.hpp  type_traits.hpp  visitor.hpp
libs/core/include/stuff/core/detail/: padding.hpp  tuple.ipp
libs/core/test/: CMakeLists.txt  bunch_of_types.cpp  core.cpp  stow.cpp
libs/elf/: CMakeLists.txt
libs/elf/include/stuff/: elf.hpp
libs/elf/include/stuff/elf/detail/: consumer.hpp  header.hpp  ident.hpp  program_header.hpp  section_header.hpp
libs/elf/test/: CMakeLists.txt  elf.cpp
libs/elf/test/test_files/: rv32gc.hpp  rv64gc.hpp
libs/expected/: CMakeLists.txt
libs/expected/include/stuff/: expected.hpp
libs/expected/test/: CMakeLists.txt  expected.cpp
libs/hash/: CMakeLists.txt
libs/hash/bench/: CMakeLists.txt  hash.cpp
libs/hash/include/stuff/: hash.hpp
libs/hash/test/: CMakeLists.txt  hash.cpp
libs/intro/: CMakeLists.txt
libs/intro/include/stuff/: intro.hpp
libs/intro/test/: CMakeLists.txt  function.cpp  intro.cpp
libs/medium_int/: CMakeLists.txt
libs/medium_int/include/stuff/: medium_int.hpp
libs/medium_int/include/stuff/medium_int/: hash.hpp  medium_int.hpp
libs/medium_int/include/stuff/medium_int/detail/: carry.hpp  constexpr_overflow.hpp  overflow_intrinsics.hpp  repr.hpp
libs/medium_int/test/: CMakeLists.txt  carry.cpp  random.cpp  random.hpp  random_arithmetic.cpp  random_roundtrip.cpp  stower.hpp  tabled.cpp  tabled_arithmetic.cpp  tabled_roundtrip.cpp
libs/paeno/: CMakeLists.txt
libs/paeno/include/stuff/: paeno.hpp
libs/paeno/test/: CMakeLists.txt  paeno.cpp
libs/ply/: CMakeLists.txt
libs/ply/include/stuff/: ply.hpp
libs/ply/test/: .gitignore  .ignore  CMakeLists.txt  cow_ascii.cpp  cow_ascii.hpp  cow_binary.cpp  cow_binary.hpp  ply.cpp
libs/qoi/: CMakeLists.txt
libs/qoi/bench/: CMakeLists.txt  bench.cpp
libs/qoi/include/stuff/: qoi.hpp
libs/qoi/include/stuff/qoi/: color.hpp  decoder.hpp  encoder.hpp
libs/qoi/include/stuff/qoi/detail/: common.hpp  decoder.ipp  encoder.ipp  qoi.ipp
libs/qoi/test/: CMakeLists.txt  qoi.cpp  test_images.hpp
libs/qoi/test/test_images/: .gitignore  NOTICE
libs/random/: CMakeLists.txt
libs/random/include/stuff/: random.hpp
libs/random/include/stuff/random/: concepts.hpp  util.hpp
libs/random/include/stuff/random/engine/: splitmix.hpp  xoroshiro128.hpp  xoshiro256.hpp
libs/random/test/: CMakeLists.txt  normal.cpp  random.cpp
libs/ranvec/: CMakeLists.txt
libs/ranvec/bench/: CMakeLists.txt  bench.cpp
libs/ranvec/include/stuff/: ranvec.hpp
libs/ranvec/include/stuff/ranvec/detail/: ranvec.ipp
libs/ranvec/test/: CMakeLists.txt  ranvec.cpp  visualisation.cpp
libs/scope/: CMakeLists.txt
libs/scope/include/stuff/: scope.hpp
libs/scope/test/: CMakeLists.txt  scope_guard.cpp  unique_resource.cpp
libs/serde/: CMakeLists.txt
libs/serde/include/stuff/: serde.hpp
libs/serde/include/stuff/serde/: concepts.hpp
libs/serde/include/stuff/serde/serializables/: basic.hpp  intro.hpp  optional.hpp  span.hpp  string_view.hpp
libs/serde/include/stuff/serde/serializers/: json.hpp
libs/serde/test/: CMakeLists.txt  serde.cpp
libs/sfloat/: CMakeLists.txt
libs/sfloat/include/stuff/: sfloat.hpp
libs/sfloat/test/: CMakeLists.txt  soft_float.cpp
libs/stl/: CMakeLists.txt
libs/stl/include/stuff/: stl.hpp
libs/stl/include/stuff/stl/detail/: ascii.hpp  binary.hpp  header.hpp  triangle.hpp  util.hpp
libs/stl/test/: .ignore  CMakeLists.txt  sphericon.stl.h  stl.cpp  utah_teapot.stl.h
libs/thread/: CMakeLists.txt
libs/thread/include/stuff/: thread.hpp
libs/thread/include/stuff/thread/: channel.hpp  spin_lock.hpp  wait_group.hpp
libs/thread/include/stuff/thread/detail/: channel.ipp
libs/thread/include/stuff/thread/detail/channel/: channel.ipp  channel_base.ipp  select.ipp
libs/thread/test/: CMakeLists.txt  channel.cpp  common.hpp  spin_lock.cpp  wait_group.cpp
libs/trilang/: CMakeLists.txt
libs/trilang/test/: trilang.cpp
scripts/: common.cmake
stuff/: CMakeLists.txt  README.md
stuff/libs/blas/: CMakeLists.txt
stuff/libs/cemath/: CMakeLists.txt
stuff/libs/cemath/test/: bit.cpp  (+5 more)
stuff/libs/expected/: CMakeLists.txt
stuff/libs/paeno/: CMakeLists.txt
stuff/libs/paeno/include/stuff/paeno/: arith.hpp
stuff/libs/paeno/include/stuff/paeno/detail/: arith.hpp  simplify.hpp  stack.hpp
stuff/libs/qoi/: CMakeLists.txt
stuff/libs/qoi/include/stuff/: qoi.hpp
stuff/libs/qoi/include/stuff/qoi/: color.hpp  decoder.hpp  encoder.hpp
stuff/libs/qoi/include/stuff/qoi/detail/: decoder.ipp  encoder.ipp  qoi.ipp
stuff/libs/qoi/test/: qoi.cpp  test_images.cpp
stuff/libs/qoi/test/test_images/: generate.sh
stuff/libs/scope/: CMakeLists.txt
stuff/libs/scope/include/stuff/scope/: scope_guard.hpp
stuff/libs/scope/include/stuff/scope/detail/: scope_guard.ipp
stuff/libs/scope/test/: unique_resource.cpp
stuff/libs/sfloat/: CMakeLists.txt
(+107 files in other folders)
